<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/grassbg"
    android:screenOrientation="portrait"
    tools:context="com.smashedcontrollers.sportsontv.MainActivity">

    <ImageView
        android:layout_width="300dp"
        android:layout_height="377dp"
        app:srcCompat="@drawable/logom"
        android:id="@+id/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="51dp" />

    <Button
        android:text="Don't Sign In"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/not_sign_in"
        android:layout_below="@+id/logo"
        android:layout_alignParentStart="true"
        android:layout_marginTop="27dp"
        android:onClick="onButtonClick" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_height="300dp"
        android:layout_below="@+id/logo"
        android:layout_alignParentStart="true" />

</RelativeLayout>
