<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:gravity="center_horizontal"
    android:background="@drawable/grassbg"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="PRESS THE CAMERA ICON TO TAKE A PICTURE "
        android:textSize="20sp"
        android:textStyle="normal|bold"
        android:textAllCaps="true"
        android:textAlignment="center"
        android:background="@drawable/orange_button" />

    <ImageView
        android:id="@+id/image_from_camera"
        android:layout_width="match_parent"
        android:src="@drawable/your_image"
        android:layout_height="300dp"
        android:layout_marginTop="16dp"
        android:cropToPadding="false" />

    <ImageButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/camera"
        android:id="@+id/take_image_from_camera"
        android:onClick="takeImageFromCamera"
        android:background="@drawable/com_facebook_auth_dialog_cancel_background" />

</LinearLayout>