<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.smashedcontrollers.sportsontv.Menu"
    android:orientation="vertical"
    android:background="@drawable/grassbg">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="175dp"
            android:layout_weight="1"
            android:onClick="onButtonClick"
            android:text="1"
            app:srcCompat="@drawable/ball"
            android:background="@drawable/com_facebook_auth_dialog_cancel_background"
            android:id="@+id/ballButton" />

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onBasketClick"
            android:text="2"
            app:srcCompat="@drawable/basketballbutton"
            android:background="@drawable/com_facebook_auth_dialog_cancel_background"
            android:id="@+id/basketButton"
            android:visibility="visible" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_weight="1"
            android:onClick="onMusicClick"
            app:srcCompat="@drawable/music"
            android:background="@drawable/com_facebook_auth_dialog_cancel_background"
            android:id="@+id/musicButton"
            android:visibility="visible" />


        <ImageButton
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_weight="1"
            android:onClick="onTubeClick"
            android:text="4"
            app:srcCompat="@drawable/ut"
            android:background="@drawable/com_facebook_auth_dialog_cancel_background"
            android:id="@+id/tubeButton"
            android:visibility="visible" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="162dp"
            android:layout_weight="1"
            android:onClick="onPictureClick"
            android:text="1"
            app:srcCompat="@drawable/camera"
            android:background="@drawable/com_facebook_auth_dialog_cancel_background"
            android:id="@+id/pictureButton"
            android:visibility="visible" />

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onFeedbackClick"
            android:text="2"
            app:srcCompat="@drawable/chatbutton"
            android:background="@drawable/com_facebook_auth_dialog_cancel_background"
            android:id="@+id/feedbackButton"
            android:visibility="visible" />
    </LinearLayout>


</LinearLayout>
