<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_tube"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/grassbg"
    tools:context="com.smashedcontrollers.sportsontv.Tube">

    <view
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        class="com.google.android.youtube.player.YouTubePlayerView"
        android:id="@+id/ytView"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="Play Video"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/playButton"
        android:layout_below="@+id/ytView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="159dp" />
</RelativeLayout>
